--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 h1{
-    color: whitesmoke;
+    color: black;
     text-align: center;
 }
 
+
 .container{
-color: blue;
+color:black;
     background:url(Pictures/istockphoto-861188910-612x612.jpg) no-repeat;
     background-position: center center;
     background-size: cover; 
-   background-color: red;
+  
     height: auto;
     width: 100%;
  
@@ -18,7 +19,16 @@ color: blue;
   max-width: 2000px;
 }
 
-
+.opacity{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    justify-content: center;
+    width:70%;
+    height: 100%;
+    opacity: 0.6;
+    background-color: lightpink;
+}
 
 button{
     margin-top: 61px;
@@ -34,11 +44,11 @@ button{
 
 }
 .soldProductRecord{
-   display: flex;
+   /* display: flex; */
 
     text-align: center;
     justify-content: center;
-    margin-top: 80px;
+    margin-top: 20px;
 
 
 }
