--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ color:black;
     background:url(Pictures/istockphoto-861188910-612x612.jpg) no-repeat;
     background-position: center center;
     background-size: cover; 
-  
     height: auto;
     width: 100%;
  
@@ -55,4 +54,159 @@ button{
 .calculations{
     display: flex;
     justify-content: space-around ;
+}
+header{
+    padding: 40px 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+} 
+.logo i{
+    height: 55px;
+    width: 55px;
+    background: transparent;
+    border: 2px solid #c41d11;
+    color: #c41d11;
+    border-radius: 50%;
+    display: inline-flex;
+    align-items:center ;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+nav .hamb{
+    width: 35px;
+    height: 24px;
+    right: 3%;
+    top:60px ;
+    z-index: 5;
+    background: transparent;
+    position: absolute;
+    cursor:pointer ;
+    display: none;
+}
+nav .hamb span{
+    display: block;
+    background: #c41d11;
+    width: 100%;
+    height: 3px;
+    transition: .3s;
+    transition-property: transform opacity ;
+}
+nav .hamb span:nth-child(2){
+    margin: 7px 0px;
+}
+nav .nav-list{
+    list-style: none;
+
+}
+nav .nav-list li{
+    display: inline-block;
+}
+nav .nav-list li a{
+    display: inline-block;
+    color:#eee;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 15px;
+    font-weight:600 ;
+
+}
+nav .nav-list li:not(:last-child) a:hover{
+    color: #c41d11;
+    transition: .4s;
+
+}
+nav .nav-list li.btn a{
+    display: inline-block;
+    background: transparent;
+    border: 2px solid #c41d11;
+    padding: 9px 28px;
+    border-radius:30px;
+    line-height: 1.3;
+    color: #c41d11;
+    font-weight: 500;
+}
+nav .nav-list li.btn:hover a{
+    background: #c41d11 ;
+    color: white;
+    border: 2px solid transparent;
+    transition: .4s;
+}
+@media screen and (max-width :1000px) {
+    nav .hamb{
+        display: initial;
+    }
+    .click{
+        top: 46px;
+
+    }
+    .click span{
+        position:absolute;
+        margin-top: 12px;
+
+    }
+    .click span:first-child{
+        transform: rotate(-40deg);
+    }
+    .click span:nth-child(2){
+        opacity: 0;
+        margin: 0;
+
+    }
+    .click span:last-child{
+        transform: rotate(40deg);
+        top:0;
+
+    }
+    nav .nav-list{
+        position: absolute;
+        top: 90px;
+        right:-65%;
+        bottom: 0;
+        width: 20%;
+        height: 20%; 
+        background: black;
+        z-index: 2;
+        padding: 6% 9%;
+        transition: .3s right ;
+        border-radius:10px ;
+    }
+    nav .nav-list li{
+        display: block;
+
+    }
+    nav .nav-list li a{
+        display: block;
+        text-align: center;
+        font-size: 18px;
+        font-weight:400 ;
+        margin-left: 0;
+        margin-bottom: 40px; 
+    }
+    nav .nav-list li.btn a{
+        position: absolute;
+        bottom: 0;
+        right: 20%;
+        left: 20%;
+        padding: 7px 15px;
+        font-size: 14px;
+    }
+    nav .nav-list.open{
+        right: 0;
+
+    }
+    .container{
+        flex-direction: column;
+        min-height: 100vh;
+
+    }
+    .opacity{
+        width:80%;
+    }
+    .calculations{
+        flex-direction: column;
+        
+    }
 }
